# dawn

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs  imgui.ini
.cargo/: config.toml
.github/workflows/: release.yml  rust.yml
assets/: barrel.toml  cube.toml  geometry.toml  icon_blob.toml  image.toml  light_texture.toml  point_light.toml  sponza.toml  sun_light.toml  teapot.toml  triangle.toml  twocube.toml  ui_font_blob.toml
assets/bins/: geometry.fsh  geometry.vsh  glyph.fsh  glyph.vsh  screen.fsh  triangle.fsh  triangle.vsh
assets/blobs/: app.manifest  twocube.glb
assets/blobs/meta/: icon_blob.toml
assets/fonts/: arial_geo.toml
assets/fonts/meta/: arial_geo._toml  martian_regular._toml
assets/maps/: map1.toml
assets/meshes/: barrel.glb  barrel.toml  cottage.toml  cube._toml  cube.toml  sponza.toml  transparent.glb  twocube.toml
assets/meshes/meta/: barrel.toml  cube.toml  transparent.toml  twocube.toml
assets/shaders/: aabb_shader.toml  billboard.fsh  billboard.vsh  billboard_shader.toml  bounding_shader.toml  forward.vsh  forward_transparent.fsh  forward_transparent.vsh  geometry.fsh  geometry.vsh  geometry_shader.toml  glyph.fsh  glyph.vsh  glyph_shader.toml  lighting.fsh  lighting.vsh  lighting_shader.toml  line.fsh  line.vsh  line_shader.toml  postprocess.fsh  postprocess.vsh  postprocess_shader.toml  quad.vsh  screen.fsh  screen.vsh  screen_shader.toml  ssao_blur.fsh  ssao_blur.vsh  ssao_blur_shader.toml  ssao_halfres.fsh  ssao_halfres_shader.toml  ssao_raw.fsh  ssao_raw_shader.toml  z_prepass.fsh  z_prepass.vsh
assets/shaders/inc/: debug_mode.glsl  depth.glsl  gbuffer.glsl  normal.glsl  prelude.glsl  ubo_camera.glsl
assets/shaders/inc/lightning/: getters.glsl  light_getters.glsl  pbr.glsl  ssao_upscale.glsl
assets/shaders/meta/: forward_shader.toml  forward_transparent_shader.toml  glyph_shader.toml  lighting_shader.toml  line_shader.toml  ssao_raw_shader.toml  z_prepass_shader.toml
assets/skyboxes/meta/: skybox1.toml
assets/textures/meta/: point_light.toml  sun_light.toml
crates/app/: Cargo.toml
crates/app/src/: lib.rs  logging.rs
crates/app/src/assets/: dict.rs  mod.rs  reader.rs
crates/app/src/rendering/: bind_tracker.rs  config.rs  dispatcher.rs  event.rs  fallback_tex.rs  frustum.rs  mod.rs  preprocessor.rs
crates/app/src/rendering/devtools/: compositor.rs  mod.rs
crates/app/src/rendering/devtools/tools/: about.rs  assets_info.rs  controls.rs  mod.rs  rendering_settings.rs  rendering_stat.rs  world_stat.rs
crates/app/src/rendering/fbo/: dbuffer.rs  gbuffer.rs  halfres.rs  lighting.rs  mod.rs  obuffer.rs  ssao.rs  ssao_raw.rs
crates/app/src/rendering/passes/: bounding_pass.rs  devtools_pass.rs  forward_pass.rs  forward_transparent_pass.rs  geometry_pass.rs  gizmos_pass.rs  lighting_pass.rs  mod.rs  postprocess_pass.rs  ssao_blur.rs  ssao_halfres.rs  ssao_raw.rs  z_pre_pass.rs
crates/app/src/rendering/primitive/: circle_lines.rs  cube.rs  cube_lines.rs  mod.rs  quad.rs  segment_lines.rs
crates/app/src/rendering/shaders/: billboard.rs  forward.rs  forward_transparent.rs  geometry.rs  lighting.rs  line.rs  mod.rs  postprocess.rs  ssao_blur.rs  ssao_halfres.rs  ssao_raw.rs  z_pre_pass.rs
crates/app/src/rendering/textures/: fallback_tex.rs  mod.rs  noise.rs
crates/app/src/rendering/ubo/: camera.rs  mod.rs  packed_light.rs  ssao_blur.rs  ssao_raw.rs
crates/app/src/world/: app_icon.rs  asset.rs  devtools.rs  exit.rs  fcam.rs  fullscreen.rs  input.rs  maps.rs  mod.rs  skybox.rs
crates/app/src/world/assets/: blob.rs  dict.rs  map.rs  mod.rs
crates/native/: Cargo.toml  build.rs
crates/native/src/: main.rs
crates/package/: Cargo.toml  build.rs
crates/package/src/: lib.rs  main.rs
crates/wasm/: Cargo.toml  build.rs
crates/wasm-server/: Cargo.toml  compose.py
crates/wasm-server/src/: main.rs
crates/wasm/src/: lib.rs
crates/wasm/www/: index.html  index.js  package-lock.json  package.json  webpack.config.js
dbb/: readme.md
src/: asset.rs  assets.rs  chain.rs  controller.rs  devtools.rs  fcam.rs  input.rs  logging.rs  main.rs  maps.rs  run.rs  ui.rs
src/components/: dictionaries.rs  fcam.rs  frustum.rs  imui.rs  input.rs  mod.rs
src/rendering/: aabb_pass.rs  config.rs  dispatcher.rs  event.rs  fallback_tex.rs  frustum.rs  fullscreen.rs  gbuffer.rs  geometry_pass.rs  mod.rs  ui.rs
src/rendering/devtools/: __legacy.rs  compositor.rs  mod.rs
src/rendering/devtools/tools/: about.rs  assets_info.rs  controls.rs  mod.rs  rendering_settings.rs  rendering_stat.rs  world_stat.rs
src/rendering/fbo/: gbuffer.rs  mod.rs  obuffer.rs
src/rendering/passes/: bounding_pass.rs  geometry_pass.rs  gizmos_pass.rs  lighting_pass.rs  mod.rs  postprocess_pass.rs  screen_pass.rs  ui_pass.rs
src/rendering/primitive/: cube.rs  quad.rs
src/rendering/ubo/: camera.rs  mod.rs  packed_light.rs
src/systems/: asset.rs  asset_reload.rs  asset_swap.rs  mod.rs  monitoring.rs  objects.rs  ui.rs
src/systems/rendering/: aabb_pass.rs  gbuffer.rs  geometry_pass.rs  mod.rs  screen_pass.rs  ui_pass.rs
src/world/: app_icon.rs  asset.rs  asset_swap.rs  devtools.rs  dictionaries.rs  exit.rs  fcam.rs  fullscreen.rs  input.rs  maps.rs  mod.rs  ui.rs
