[workspace]
members = [
    ".",
    "lib/crates/assets",
    "lib/crates/audio",
    "lib/crates/ecs",
    "lib/crates/graphics",
    "lib/crates/profile",
    "lib/crates/dac",
]

[package]
name = "dawn"
version = "0.1.0"
edition = "2021"

[features]
default = ["gl"]
gl = ["dawn-graphics/gl"]

[build-dependencies]
dawn-dacgen = { path = "lib/crates/dacgen" }
dawn-dac = { path = "lib/crates/dac" }
dirs = "6.0.0"
log = "0.4.27"

[dependencies]
dawn-assets = { path = "lib/crates/assets", features = ["hub"] }
dawn-audio = { path = "lib/crates/audio" }
dawn-ecs = { path = "lib/crates/ecs" }
dawn-graphics = { path = "lib/crates/graphics" }
dawn-profile = { path = "lib/crates/profile" }
dawn-dac = { path = "lib/crates/dac" }
ansi_term = "0.12.1"
evenio = "0.6.0"
log = "0.4.27"
glam = "0.30.5"
libc = "0.2.172"
tinyrand = "0.5.0"

[profile.release]
lto = true
opt-level = 3

[profile.dev]
lto = false
opt-level = 1