[package]
name = "dawn-app"
# The version is derived from git tags by GitHub Actions
description = "Bootstrapper for Dawn Application"
license = "MIT"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["devtools"]

devtools = [
    "dep:egui",
    "dep:egui-winit",
    "dep:egui_glow",
    "dep:egui_extras",
]

[dependencies]
dawn-assets = { path = "../../lib/crates/assets", features = ["hub"] }
dawn-audio = { path = "../../lib/crates/audio" }
dawn-ecs = { path = "../../lib/crates/ecs" }
dawn-graphics = { path = "../../lib/crates/graphics" }
dawn-util = { path = "../../lib/crates/util" }
dawn-dac = { path = "../../lib/crates/dac" }
glow = "0.16.0"
evenio = "0.6.0"
log = "0.4.27"
ico = "0.4.0"
dirs = "6.0.0"
build-info = "0.0.41"
glam = "0.30.5"
anyhow = "1.0.99"
bitflags = "2.9.2"
winit = "0.30.12"
crossbeam-channel = "0.5.15"
bytemuck = "1.23.2"

egui = { version = "0.32.2", features = ["default_fonts", "persistence", "rayon", "log" ], optional = true }
egui_extras = { version = "0.32.2", optional = true }
egui_glow = { version = "0.32.2", optional = true }
web-time = "1.1.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }
getrandom02 = { package = "getrandom", version = "0.2", features = ["js"] }
egui-winit = { version = "0.32.2", optional = true, default-features = false, features = ["links"] }
wasm-bindgen = "0.2.101"

[target.'cfg(target_os = "linux")'.dependencies]
egui-winit = { version = "0.32.2", optional = true, default-features = false, features = ["clipboard", "links", "wayland", "x11"] }
native-dialog = "0.9.0"

[target.'cfg(target_os = "windows")'.dependencies]
egui-winit = { version = "0.32.2", optional = true, default-features = false, features = ["clipboard", "links"] }
native-dialog = "0.9.0"

[target.'cfg(target_os = "macos")'.dependencies]
egui-winit = { version = "0.32.2", optional = true, default-features = false, features = ["clipboard", "links"] }
native-dialog = "0.9.0"

[profile.release]
lto = true
opt-level = 3

[profile.dev]
lto = false
opt-level = 1
