[package]
name = "dawn-wasm"
# The version is derived from git tags by GitHub Actions
description = "Bootstrapper for Dawn Application (wasm)"
license = "MIT"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["build_assets", "devtools"]
build_assets = [
    "dep:dawn-dacgen",
    "dep:dawn-dac",
    "dep:dirs",
]
devtools = [ "dawn-app/devtools" ]

[build-dependencies]
build-info-build = "0.0.41"
dawn-dacgen = { path = "../../lib/crates/dacgen", optional = true }
dawn-dac = { path = "../../lib/crates/dac", optional = true }
dirs = { version = "6.0.0", optional = true }

[dependencies]
dawn-app = { path = "../app" }
build-info = "0.0.41"
wasm-bindgen = "0.2.101"
log = "0.4.28"
web-sys = "0.3.78"

[profile.dev]
debug = 2

[profile.release]
debug = 1