[package]
name = "dawn-wasm"
# The version is derived from git tags by GitHub Actions
description = "Bootstrapper for Dawn Application (wasm)"
license = "MIT"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["devtools"]
devtools = [ "dawn-app/devtools" ]
# To build with assets, consider using compose.py

[build-dependencies]
build-info-build = "0.0.41"

[dependencies]
dawn-app = { path = "../app" }
dawn-dac = { path = "../../lib/crates/dac" }
dawn-assets = { path = "../../lib/crates/assets" }
serde = "1.0.225"
serde_bytes = "0.11.19"
anyhow = "1.0.99"
build-info = "0.0.41"
wasm-bindgen = { version = "0.2.101" }
serde-wasm-bindgen = "0.6.5"
log = "0.4.28"
web-sys = "0.3.78"

[profile.dev]
debug = 2
lto = false
opt-level = 1

[profile.release]
debug = 1
lto = true
opt-level = 3
